<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/selected_restaurant_name"
        android:textSize="20sp"/>

    <RatingBar
        android:id="@+id/rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:rating="0"
        android:stepSize=".5"
        android:isIndicator="true"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"/>

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/toggleButton"
        android:textOff="@string/checked_out"
        android:textOn="@string/checked_in"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reviews_of_friends"
        android:textSize="15sp"
        android:paddingBottom="5dp"/>

    <ListView
        android:id="@+id/list_view_review_friends"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="@color/colorWhite"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friends_who_are_checked_in_now"
        android:textSize="15sp"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        />

    <ListView
        android:id="@+id/list_view_check_in"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="@color/colorWhite"
        android:listSelector="@android:color/transparent"
        />

    <Button
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_review"
        android:id="@+id/submit"
        />

</LinearLayout>
